Add home page testing and finished user model test

--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -51,7 +51,7 @@
 
         <li>
           <% if current_user %>
-          <span>Signed in as <%= current_user.name %></span>
+          <span>Signed in as <%= current_user.first_name %></span>
         </li>
         <li>
           <%= link_to "Logout", '/logout' %>
